# stock-indicators-python

./: .coderabbit.yaml  .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pylintrc  AGENTS.md  README.md  benchmark_sample.json  coderabbit.yaml  decimal_benchmark.json  gitversion.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  research_decimal_conversion.py  sample_indicators.json  setup.py
.devcontainer/: .actrc  devcontainer.json  install-dependencies.sh  post-create.sh
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  build.main.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: cd.yml  ci.yml  codeql-analysis.yml  deploy-docs.yml  deploy-package.yml  deploy-website.yml  deploy.yml  docs-deploy.yml  docs-test-a11y.yml  docs-test-links.yml  issues.yml  links.yml  lint-pull-request.yml  lock-issue-pr.yml  lock.yml  semantic-pr-linter.yml  test-all-env.yml  test-code-coverage.yml  test-coverage.yml  test-docs-a11y.yml  test-docs-links.yml  test-indicators-all-env.yml  test-indicators-ci.yml  test-indicators-coverage.yml  test-indicators-full.yml  test-indicators-locale.yml  test-indicators.yml  test-localization.yml  test-performance.yml  test-website-a11y.yml  test-website-links.yml  test.yml
SkenderStockIndicators/: __init__.py
SkenderStockIndicators/_cslib/: __init__.py
SkenderStockIndicators/_cstypes/: decimal.py  list.py
SkenderStockIndicators/indicators/: __init__.py  adl.py  adx.py  alligator.py  aroon.py  atr.py  awesome.py  beta.py  bollinger_bands.py  fractal.py  sma.py  stoch_rsi.py
SkenderStockIndicators/indicators/common/: __init__.py  candles.py  quote.py  results.py  wrappers.py
benchmarks/: conftest.py  test_benchmark_indicators.py  test_decimal_conversion_performance.py
docs/: 404.html  CNAME  CONTRIBUTING.md  GUIDE.md  GemFile  Gemfile  README.md  UTILITIES.md  _config.yml  contributing.md  dx-setup.md  guide.md  indicators.html  performance.md  site.webmanifest  utilities.md
docs/.offline/: banner.xcf  social-banner.pptx
docs/_data/: aliases.yml
docs/_includes/: candle-result.md  candlepart-options.md  footer.html  header.html  scripts.html
docs/_indicators/: Adl.md  Adx.md  Alligator.md  Alma.md  Aroon.md  Atr.md  AtrStop.md  Awesome.md  Beta.md  BollingerBands.md  Bop.md  Cci.md  ChaikinOsc.md  Chandelier.md  Chop.md  Cmf.md  Cmo.md  ConnorsRsi.md  Correlation.md  Dema.md  Doji.md  Donchian.md  DoubleEma.md  Dpo.md  Dynamic.md  ElderRay.md  Ema.md  Epma.md  Fcb.md  FisherTransform.md  ForceIndex.md  Fractal.md  Gator.md  HeikinAshi.md  Hma.md  HtTrendline.md  Hurst.md  Ichimoku.md  Kama.md  Keltner.md  (+42 more)
docs/_indicators/.unimplemented/: Bop.md  Cci.md  ChaikinOsc.md  Chandelier.md  Chop.md  Cmf.md  ConnorsRsi.md  Correlation.md  Donchian.md  DoubleEma.md  Dpo.md  ElderRay.md  Epma.md  Fcb.md  FisherTransform.md  ForceIndex.md  Gator.md  HeikinAshi.md  Hma.md  HtTrendline.md  Hurst.md  Ichimoku.md  Kama.md  Keltner.md  Kvo.md  MaEnvelopes.md  Mama.md  (+33 more)
docs/_layouts/: base.html  default.html  indicator.html  page.html
docs/_site/: 404.html  index.html  redirects.json  sitemap.xml
docs/assets/: manifest.json
docs/pages/: contributing.md  guide.md  home.md  indicators.html  performance.md  utilities.md
docs_temp/: GUIDE.md  INDICATORS.md
samples/quotes/: Bad.csv  Bitcoin.csv  Compare.csv  Default.csv  History.xlsx  Intraday.csv  Longest.csv  Longish.csv  MSFT.csv  Max.csv  Mismatch.csv  Penny.csv  SPX.csv  TZAware.csv  TooBig.csv  ZigZag.csv
samples/zig_zag/: data.schrodinger.json
stock_indicators/: __init__.py  exceptions.py  logging_config.py
stock_indicators/_cslib/: __init__.py  runtimeconfig.json
stock_indicators/_cstypes/: __init__.py  datetime.py  decimal.py  list.py
stock_indicators/indicators/: __init__.py  adl.py  adx.py  alligator.py  alma.py  aroon.py  atr.py  atr_stop.py  awesome.py  basic_quotes.py  beta.py  bollinger_bands.py  bop.py  cci.py  chaikin_oscillator.py  chandelier.py  chop.py  cmf.py  cmo.py  connors_rsi.py  correlation.py  dema.py  doji.py  donchian.py  double_ema.py  dpo.py  dynamic.py  elder_ray.py  ema.py  epma.py  fcb.py  fisher_transform.py  force_index.py  fractal.py  gator.py  heikin_ashi.py  hma.py  ht_trendline.py  hurst.py  ichimoku.py  (+46 more)
test_data/quotes/: Bad.csv  Bitcoin.csv  Compare.csv  DateOfDateOnly.csv  DateOfDateOnlyBasic.csv  DateOfDateOnlyDMY.csv  DateOfDateOnlyUS.csv  DateOfIANAZoneDate.csv  DateOfNaiveBasicDate.csv  DateOfNaiveMinDate.csv  DateOfNaiveMsDate.csv  DateOfNaiveSecDate.csv  DateOfOffsetBasicDate.csv  DateOfOffsetDate.csv  DateOfOffsetFracDate.csv  DateOfRFC1123Date.csv  DateOfUTCDate.csv  DateOfUTCFracZDate.csv  DateOfUTCZDate.csv  Default.csv  History.xlsx  Intraday.csv  Longest.csv  Longish.csv  MSFT.csv  Max.csv  Mismatch.csv  Penny.csv  SPX.csv  TooBig.csv  ZigZag.csv
tests/: TestBase.py  __init__.py  conftest.py  test_adl.py  test_adx.py  test_alligator.py  test_alma.py  test_aroon.py  test_atr.py  test_atr_stop.py  test_awesome.py  test_basic_quote.py  test_beta.py  test_bollinger_bands.py  test_bop.py  test_cci.py  test_chaikin_oscillator.py  test_chandelier.py  test_chop.py  test_cmf.py  test_cmo.py  test_common.py  test_connors_rsi.py  test_correlation.py  test_dema.py  test_doji.py  test_donchian.py  test_double_ema.py  test_dpo.py  test_dtype.py  test_dynamic.py  test_elder_ray.py  test_ema.py  test_epma.py  test_fcb.py  test_fisher_transform.py  test_force_index.py  test_fractal.py  test_gator.py  test_heikin_ashi.py  (+52 more)
tests/common/: test-dateof-roundtrip-variants.py  test_candle.py  test_common.py  test_cstype_conversion.py  test_cstype_datetime_kind.py  test_cstypes.py  test_dateof_equivalence.py  test_dateof_identity_roundtrip.py  test_dateof_sma_roundtrip.py  test_decimal_conversion_comparison.py  test_indicator_results.py  test_locale.py  test_quote.py  test_sma_roundtrip_dates.py  test_type_compatibility.py
tests/test_data/: History.py  __init__.py
typings/System/: __init__.pyi
typings/pythonnet/: __init__.pyi
(+117 files in other folders)
