[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-indicators"
authors = [{name = "Dave Skender"}]
maintainers = [{name="Dong-Geon Lee"}]
description = "Stock Indicators for Python.  Send in historical price quotes and get back desired technical indicators such as Stochastic RSI, Average True Range, Parabolic SAR, etc.  Nothing more."
readme = "README.md"
license = {text = "Apache 2.0"}
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Office/Business :: Financial',
    'Topic :: Office/Business :: Financial :: Investment',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Typing :: Typed'
]
requires-python = ">=3.8"
dependencies = [
    "pythonnet>=3.0.0",
    "typing_extensions>=4.0.0"
]
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
dynamic = ["version"]

[project.urls]
Homepage = "https://python.stockindicators.dev"
"Bug Tracker" = "https://github.com/DaveSkender/Stock.Indicators.Python/issues"
Documentation = "https://python.stockindicators.dev"
"Source Code" = "https://github.com/DaveSkender/Stock.Indicators.Python/tree/main"
"Release Notes" = "https://github.com/DaveSkender/Stock.Indicators.Python/releases"

[tool.setuptools]
packages=["stock_indicators"]

# can be empty if no extra settings are needed, presence enables setuptools_scm
[tool.setuptools_scm]
local_scheme = "no-local-version"
