[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-indicators"
authors = [{name = "Dave Skender"}]
maintainers = [{name="Dong-Geon Lee"}]
description = "Stock Indicators for Python.  Send in historical price quotes and get back desired technical indicators such as Stochastic RSI, Average True Range, Parabolic SAR, etc.  Nothing more."
readme = "README.md"
license = {text = "Apache 2.0"}
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Office/Business :: Financial',
    'Topic :: Office/Business :: Financial :: Investment',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Typing :: Typed'
]
requires-python = ">=3.8"
dependencies = [
    "pythonnet>=3.0.0",
    "typing_extensions>=4.0.0"
]
keywords = [
"Stock Indicators", "Technical Indicators", "Market", "Technical Analysis", "Algorithmic", "Trading", "Trade",
"Momentum", "Finance", "Algorithm", "Algo", "AlgoTrading", "Financial", "Strategy", "Chart", "Charting",
"Oscillator", "Overlay", "Equity", "Bitcoin", "Crypto", "Cryptocurrency", "Forex", "Quantitative",
"Historical", "Quotes", "Accumulation", "Distribution", "ADL", "Aroon", "True Range", "ATR",
"Bollinger Bands", "Commodity", "CCI", "Chandelier Exit", "Chaikin Money Flow", "CMF", "MFI",
"Kaufman Adaptive", "Moving Average", "Convergence", "Divergence", "MACD", "SMA", "EMA", "DEMA",
"TEMA", "TRIX", "Smoothed", "Elder-ray", "Bull", "Bear", "Power", "Force", "Hurst Exponent",
"Relative", "Strength", "Index", "RSI", "Connors RSI", "Stochastic", "Directional", "Movement", "ADX",
"Donchian", "Keltner Channel", "Heikin-Ashi", "Hilbert Transform Instantaneous Trendline", "Hull",
"HMA", "Ichimoku Cloud", "On-balance Volume", "OBV", "Price", "PMO", "PRS", "Parabolic SAR", "PSAR",
"Pivot Points", "Rate of Change", "ROC", "Linear Regression", "R-Squared", "Renko", "Schaff Cycle",
"Slope", "Standard Deviation", "Beta", "Convexity", "Correlation", "SuperTrend", "Ulcer", "Ultimate",
"Vortex", "Williams %R", "Alligator", "Gator", "Fractal", "Chaos", "Choppiness", "Endpoint", "WMA", "ZigZag"]

dynamic = ["version"]

[project.urls]
Homepage = "https://python.stockindicators.dev"
"Bug Tracker" = "https://github.com/DaveSkender/Stock.Indicators.Python/issues"
Documentation = "https://python.stockindicators.dev"
"Source Code" = "https://github.com/DaveSkender/Stock.Indicators.Python/tree/main"
"Release Notes" = "https://github.com/DaveSkender/Stock.Indicators.Python/releases"

[tool.setuptools.packages.find]
exclude = ["tests*", "benchmarks*", "samples*", "docs*"]

# can be empty if no extra settings are needed, presence enables setuptools_scm
[tool.setuptools_scm]
local_scheme = "no-local-version"
